--- a/lms/templates/static_templates/about.html
+++ b/lms/templates/static_templates/about.html
@@ -5,5 +5,5 @@
 
 <section class="container about">
 <h1>${_("About")}</h1>
-<p>${_("This page left intentionally blank. It is not used by edx.org but is left here for possible use by installations of Open edX.")}</p>
+<p>${_("Boise State X is the University's site for online innovation and outreach. Utilizing the open software that is the platform for the popular site edX, Boise State X extends online courses to the world. Boise State X is utilized for the College of Innovation and Design's "+'"Bridge to Career"'+" courses, and it is being developed by Extended Studies to provide open courses to people in the community, the state, and beyond.  Check back with Boise State X to see a growing array of online offerings.")}</p>
 </section>
