--- a/lms/templates/static_templates/contact.html
+++ b/lms/templates/static_templates/contact.html
@@ -5,5 +5,7 @@
 
 <section class="container about">
 <h1>${_("Contact")}</h1>
-<p>${_("This page left intentionally blank. It is not used by edx.org but is left here for possible use by installations of Open edX.")}</p>
+<p>${_("For questions about content made possible by the College of Innovation and Design, contact Randall Stacy,  randallstacy@boisestate.edu.")} <br>
+	${_("For questions about content made possible by the Division of Extended Studies, contact Mark Wheeler, mwheeler@boisestate.edu.")} <br>
+	${_("For questions about the Open edX software made possible by the Office of Information Technology, contact the Learning Technology Solutions team, lts@boisestate.edu")}</p>
 </section>
