--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -20,13 +20,16 @@
       <nav class="nav-colophon" aria-label="${_('About')}">
         <ol>
             % for item_num, link in enumerate(footer['navigation_links'], start=1):
-            <li class="nav-colophon-0${item_num}">
-              <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
-            </li>
+	            % if link['name'] in ["about", "contact"]:
+	            <li class="nav-colophon-0${item_num}">
+	              <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
+	            </li>
+	            % endif
             % endfor
         </ol>
       </nav>
 
+      <%doc>
       <div class="wrapper-logo">
         <p>
           <a href="/">
@@ -41,6 +44,7 @@
           </a>
         </p>
       </div>
+      </%doc>
 
       ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
       <p class="copyright">${footer['copyright']}</p>
@@ -48,9 +52,12 @@
       <nav class="nav-legal" aria-label="${_('Legal')}">
         <ul>
           % for item_num, link in enumerate(footer['legal_links'], start=1):
+            % if link['url'] == "/privacy":
             <li class="nav-legal-0${item_num}">
-              <a href="${link['url']}">${link['title']}</a>
+              ## <a href="${link['url']}">${link['title']}</a>
+              <a href="http://go.boisestate.edu/privacy/">${link['title']}</a>
             </li>
+            % endif
           % endfor
         </ul>
       </nav>
